fix(TCDICORE-230): make overflow visible in edit mode
- explicitly makes overflow visible in the expanded item to ensure that
  the content is visible inside the editor

--- a/ui/src/scss/themes/default/_verticalFeatured.scss
+++ b/ui/src/scss/themes/default/_verticalFeatured.scss
@@ -9,6 +9,7 @@
     flex-grow: 1;
     transition: all 0.5s;
     backface-visibility: hidden;
+    overflow: visible !important;
   }
 
   .item.collapsed {
